--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
       "browser": true
     },
     "extends": "eslint:recommended",
-    "ecmaFeatures": 
-    {
-      "arrowFunctions" : true
+    "ecmaFeatures": {
+      "arrowFunctions": true
     },
     "rules": {
       "quotes": 0,
@@ -34,10 +33,12 @@
       "comma-dangle": 0,
       "no-mixed-spaces-and-tabs": 0,
       "no-process-exit": 0,
-      "no-console": 0
+      "no-console": 0,
+      "no-shadow": 0
     }
   },
   "dependencies": {
+    "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "mongodb": "^2.0.47"
   }
