--- a/server/package.json
+++ b/server/package.json
@@ -34,7 +34,8 @@
       "no-mixed-spaces-and-tabs": 0,
       "no-process-exit": 0,
       "no-console": 0,
-      "no-shadow": 0
+      "no-shadow": 0,
+      "handle-callback-err": 0
     }
   },
   "dependencies": {
