--- a/server/package.json
+++ b/server/package.json
@@ -41,5 +41,9 @@
   "dependencies": {
     "express": "^4.13.3",
     "mongodb": "^2.0.47"
-  }
+  },
+  "engines": {
+    "node": "^4.2.0",
+    "npm": "^2.x"
+  }  
 }
